🌐 Configure custom domain demo.houndr.ai
✨ Features Added:
- Custom domain configuration for demo.houndr.ai
- Enhanced security headers in render.yaml
- Comprehensive DNS setup documentation
- Production environment URL configuration

📝 Files Updated:
- render.yaml: Added custom domain and security headers
- README.md: Updated demo URL to demo.houndr.ai
- RENDER_DEPLOYMENT.md: Enhanced with DNS configuration steps
- .env.production: Added VITE_APP_URL for custom domain
- CUSTOM_DOMAIN_SETUP.md: Complete DNS setup guide

🔧 Configuration:
- CNAME: demo.houndr.ai → houndr-demo.onrender.com
- Automatic SSL certificate provisioning
- HTTP to HTTPS redirects
- Security headers (X-Frame-Options, X-Content-Type-Options)

📚 Documentation:
- Step-by-step DNS configuration for multiple providers
- Troubleshooting guide with verification commands
- Timeline expectations and support resources
- Verification checklist for successful setup

🚀 Ready for deployment at https://demo.houndr.ai

--- a/render.yaml
+++ b/render.yaml
@@ -5,10 +5,18 @@ services:
     buildCommand: npm ci && npm run build
     staticPublishPath: ./build
     pullRequestPreviewsEnabled: false
+    customDomains:
+      - demo.houndr.ai
     headers:
       - path: /*
         name: X-Robots-Tag
         value: noindex
+      - path: /*
+        name: X-Frame-Options
+        value: DENY
+      - path: /*
+        name: X-Content-Type-Options
+        value: nosniff
     routes:
       - type: rewrite
         source: /*
@@ -18,3 +26,5 @@ services:
         value: production
       - key: GENERATE_SOURCEMAP
         value: false
+      - key: VITE_APP_URL
+        value: https://demo.houndr.ai
