--- a/.env.production
+++ b/.env.production
@@ -4,6 +4,7 @@ GENERATE_SOURCEMAP=false
 VITE_APP_TITLE=Houndr AI Demo
 VITE_APP_DESCRIPTION=AI-Powered Sales Intelligence Platform Demo
 VITE_APP_VERSION=1.0.0
+VITE_APP_URL=https://demo.houndr.ai
 
 # Disable development features
 VITE_DEV_TOOLS=false
